<resources>
    <string name="app_name">TrackMe</string>
    <string name="title_activity_login">Cadastre um amigo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Cadastrar</string>
    <string name="action_sign_in_short">Cadastrar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello_world">Hello World</string>
    <string name="botao_ir_cadastro">Cadastrar Amigo</string>
    <string name="botao_ir_mapa">Ir para o mapa</string>
    <string name="title_activity_maps">Map</string>
    <string name="botao_viajar">Viajar</string>
    <string name="label_destino">Destino</string>
    <string name="label_tempo_estimado">Tempo Estimado (min)</string>
    <string name="botao_iniciar">Iniciar</string>
    <string name="botao_parar">Parar</string>
    <string name="botao_login">Login</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="label_email">E-mail</string>
    <string name="label_senha">Senha</string>
    <string name="label_celular">Celular</string>

</resources>
