<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editLogin"
        android:hint="@string/label_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editSenha"
        android:hint="@string/label_senha" />

    <Button
        android:id="@+id/btLogin"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/botao_login"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/botao_cadastrar"
        android:id="@+id/button5"
        android:onClick="userRegistration" />


</LinearLayout>
